# libtorch-example-codes

./: .gitattributes  .gitignore  README.md
Mnist/: CMakeLists.txt  Main.cpp  Main.h  Mnist-Cpp.cpp  Mnist-Cpp.ipynb  Mnist-py.ipynb  Mnist.cpp  Mnist.ipynb  Mnist.py  MnistSimple.cpp  README.md  best_model.pt  convert_model.py  run.sh
Mnist/Mnist-PyTorch/: Mnist.py  mnist-using-myvision.ipynb  mnist-using-myvision.py
Mnist/Mnist-PyTorch/logs/: metrics.csv
